--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/9749481888.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src=".https://kit.fontawesome.com/9749481888.js" crossorigin="anonymous"></script>
+    <script src=".script.js"></script>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
 
             </div>
             <div class="photo">
-                <img src="/photo31.jpeg" width="300px" class="image31">
+                <img src="./photo31.jpeg" width="300px" class="image31">
             </div>
         </div>
 
@@ -63,7 +63,7 @@
         <div id="about">
             <div class="row">
                 <div class="row-1">
-                    <img class="image-2" src="/photo21.jpeg">
+                    <img class="image-2" src="./photo21.jpeg">
                 </div>
                 <div class="row-2">
                     
@@ -162,7 +162,7 @@
         
         <div class="container">
             <div class="images">
-                <img class="image-1" src="/work-1.png">
+                <img class="image-1" src="./work-1.png">
                 <div class="popup">
                     <p class="heading">Social Media Website</p>
                     <p>The Website connects you to the talented people</p>
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="images">
-                <img class="image-1" src="/work-2.png">
+                <img class="image-1" src="./work-2.png">
                 <div class="popup">
                     <p class="heading">Music Website</p>
                     <p>The Website connects you to the talented people</p>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="images">
-                <img class="image-1" src="/work-3.png">
+                <img class="image-1" src="./work-3.png">
                 <div class="popup">
                     <p class="heading">Online Shopping Website</p>
                     <p>The Website connects you to the talented people</p>
